# homotopy-aware-MAPP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: optimizer_config.yaml
maps/: empty-14-14.map  obstacle-14-14.map  obstacle-20-20.map  sample.map  sample2.map
samples/: sample.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt
script/: braid_count.sh  check_all.py  check_plan.py  clang-all.sh  count_braids.py  generate_distance_instance.py  generate_grid_instances.sh  generate_grid_map_instance.py  generate_grid_map_instance_2.py  generate_map_instances.sh  generate_map_instances_2.sh  generate_random_grid_instance.py  kill_all.sh  optimize_PP_and_CBS.sh  record_logs.sh  record_logs_map.sh  run_cd_values.sh  show_cd_values.py  show_histogram.py  show_lengths.py  show_makespan.py  show_maxcd.py  show_results.py  show_runtimes.py  show_runtimes_map.py  show_winning_rate.py  solve_by_PP.sh  solve_by_PPvP.sh  visualize_map.py  visualize_plans.py
src/: AnonymousBhattacharya.cpp  AnonymousBhattacharya.hpp  PP_on_grid.cpp  PP_with_various_priority.cpp  braid.cpp  braid.hpp  count_braids.cpp  count_obstacles.cpp  dynnikov.hpp  dynnikov_count.cpp  dynnikov_test.cpp  optimize_plans.cpp  optimizer.cpp  prioritized_planning.cpp  prioritized_planning.hpp  virtual_braid.hpp
